<resources>
    <string name="app_name">meebu</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>
    <string name="history">History</string>
    <string name="meebuwallet">Meebu Wallet</string>
    <string name="language">Language</string>
    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="logintext">To access your account,Please enter your Email address
    or Mobile Number &amp; Password</string>
    <string name="please_enter">Please enter 4 digit verification code that you received via Mobile Sms.</string>
    <string name="forgot">Forgot Password?</string>
    <string name="forgottxt">We can help you reset,your password using your Email address or Mobile Number linked to your account.</string>
    <string name="signup"> <u>Sign Up</u></string>
    <string name="signin"> <u>Sign In</u></string>
    <string name="resend"><u>RESEND CODE</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="termsandcondition">Terms and Condition</string>
    <string name="becomemeebupartner">Become Meebu Partner</string>
    <string name="notificationsetting">Notifications Setting</string>
    <string name="pleaseentermobile">Please enter your Mobile Number. We will send a digit verification code.</string>
    <string name="mobilenumberhint">+91 Mobile Number</string>
    <string name="termsandconditionaccept">By Taping continiue, I agree meebu <u>Terms of Use</u></string>
    <string name="alreadyaccount">Already have an account? <u>Sign In</u></string>
    <string name="please_enter_details">Please enter to finish with your profile details. </string>
    <string name="google_maps_key">AIzaSyD3t0-rMDn9zvQbzXqOEu1EUV9lssGSPjg</string>
    <string name="myprofile">My Profile</string>
    <string name="sendpackage">Send Package</string>
    <string name="fullname">Full Name*</string>
    <string name="mobilenumber">Phone Number <font color='red'>*</font></string>
    <string name="altmobilenumber">Alternate Phone Number</string>
    <string name="country">Country*</string>
    <string name="state">Pickup Address*</string>
    <string name="landmark">Nearby Landmark</string>
    <string name="fulladdress">Full Address*</string>
    <string name="receivername">Receiver Name</string>
    <string name="myreviews">Reviews</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="orderstatus">Order Status</string>
    <string name="delete">DELETE</string>
    <string name="savedaddress">Saved Addresses</string>
    <string name="driver_id">Driver Id</string>
    <string name="track_id">Track Id</string>
    <string name="left_time">Left Time</string>
    <string name="sender_address">Sender Address</string>
    <string name="receiver_address">Receiver Address</string>
    <string name="package_details">Package Details</string>
    <string name="package_picked">Package Picked</string>
    <string name="travelling_on_a_route">Travelling on a Route</string>
    <string name="delivered">Delivered</string>
    <string name="customer_care">CUSTOMER CARE</string>
    <string name="customer_care_title">Customer Care</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="select_problem_type">Select Problem Type</string>
    <string name="describe_problem">Describe Problem</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="optional">(Optional)</string>
    <string name="upload">Upload</string>
    <string name="send">Send</string>
    <string name="invite_friends_for_points">Invite your frinds to get free 30 points</string>
    <string name="invite_friends_on_meebu">Invite frinds on meebu and after they join, both of you will get 30 points which is redeemable on everything.</string>
    <string name="tap_to_copy">Tap on invitation code to copy</string>
    <string name="about_driver_found">About driver found</string>
    <string name="about_every_job_update">About every job update</string>
    <string name="about_start_reach_delivered">Notification when job started, about to reach, delivered.</string>
    <string name="about_app_updates">About app updates</string>
    <string name="about_wallet_activities">About wallet activities</string>
    <string name="about_customer_query_solution">About customer query solution</string>
    <string name="about_friend_joined">About friend joined</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_new_email_address">Enter New Email Address</string>
    <string name="submit">Submit</string>
    <string name="received_code_via_email">Please enter 4 digit verification code that you received via  Email Address.</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="enter_new_phone">Enter New Phone Number</string>
    <string name="received_code_via_mobile_sms">Please enter 4 digit verification code that you received via  Mobile SMS.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="verify_aadhar_card">Verify Aadhar Card</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="running_order">Running Order</string>
    <string name="aadhar_front">Aadhar Card\n Front Photo</string>
    <string name="aadhar_back">Aadhar Card\n Back Photo</string>
    <string name="pan_card_photo">Pan Card Photo</string>
    <string name="Password_doesnt_match">Password doesn\'t match</string>
    <string name="Please_Enter_Valid_Email">Please enter valid email.</string>
    <string name="Please_enter_email">Please enter email</string>
    <string name="Please_enter_fullname">Please enter full name</string>
    <string name="Please_Enter_Password">Please enter password</string>
    <string name="verify_pan_card">Verify Pan Card</string>
    <string name="lorem_ipsum_large">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. \\n\\n Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. \\n\\n\\n Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string-array name="labels">
        <item>Pickup Address Details</item>
        <item>Delivery Address Details</item>
        <item>Package Details</item>

    </string-array>
    <string name="title_activity_rewards">RewardsActivity</string>
    <string name="city">City*</string>
</resources>