<layout><LinearLayout
    android:id="@+id/delivery"
android:focusableInTouchMode="true"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:visibility="gone"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <CheckBox
        android:theme="@style/CheckboxTheme"
        android:layout_width="match_parent"
        android:textColor="@color/black_overlay"
        android:layout_height="wrap_content"
        android:text="Save Address"/>

    <EditText
        android:hint="@string/receivername"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_user_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:hint="@string/mobilenumber"
        android:drawableLeft="@drawable/ic_mobile_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:hint="@string/country"
        android:drawableLeft="@drawable/ic_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:hint="@string/state"
        android:drawableLeft="@drawable/ic_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:hint="@string/landmark"
        android:drawableLeft="@drawable/ic_map_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:hint="@string/fulladdress"
        android:drawableLeft="@drawable/ic_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <com.meebu.utils.RubikBoldButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CONTINUE"

        android:padding="3dp"
        android:background="@drawable/bt_background"
        android:hapticFeedbackEnabled="true"
        android:id="@+id/fp_submit"
        android:elevation="3dp"

        android:gravity="center"
        android:textSize="@dimen/loginheading"
        android:textColor="#fff"
        />



</LinearLayout>
</layout>