<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:contentInsetEnd="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"

        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_left_arrow_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="left"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/customer_care_title"
                android:textColor="#fff" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/notification_icon" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <EditText
            android:id="@+id/ed_problem_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:focusable="false"
            android:fontFamily="@font/sourcesanspro_regular"
            android:cursorVisible="false"
            android:drawableRight="@drawable/ic_down"
            android:hint="@string/select_problem_type"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/ed_problem_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textCursorDrawable="@null"
            android:lines="4"
            android:fontFamily="@font/sourcesanspro_regular"
            android:gravity="top"
            android:hint="@string/describe_problem"
            android:textColor="#000000"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <TextView
                android:id="@+id/attach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#9b9b9b"
                android:fontFamily="@font/sourcesanspro_regular"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/attach_photo"/>

            <TextView
                android:layout_toRightOf="@+id/attach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#9b9b9b"
                android:fontFamily="@font/sourcesanspro_regular"
                android:layout_gravity="top"
                android:gravity="top"
                android:textSize="10sp"
                android:text="@string/optional"/>

            <TextView
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2e3359"
                android:gravity="center"
                android:fontFamily="@font/sourcesanspro_regular"
                android:drawablePadding="-7dp"
                android:layout_centerVertical="true"
                android:textSize="11sp"
                android:drawableLeft="@drawable/ic_attach"
                android:text="@string/upload"/>

        </RelativeLayout>

        <View
            android:background="#6b6b6b"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_width="match_parent"/>

        <Button
            android:id="@+id/bt_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sourcesanspro_bold"
            android:textColor="#ffffff"
            android:text="@string/send"
            android:background="@drawable/button_bg"/>

    </LinearLayout>

</RelativeLayout>
</layout>