<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditProfileActivity">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimaryDark"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"

            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_left_arrow_white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/edit_profile"
                    android:textColor="#fff" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:fitsSystemWindows="true"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:hint="Address Title"
                    android:textColor="#000000"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:hint="@string/full_name"
                    android:textColor="#000000"/>

            </android.support.design.widget.TextInputLayout>
<android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:hint="@string/email_address"
                    android:textColor="#000000"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:inputType="phone"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:hint="@string/mobile_number"
                    android:textColor="#000000"/>

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:fontFamily="@font/sourcesanspro_regular"
                android:cursorVisible="false"
                android:drawableRight="@drawable/ic_down"
                android:hint="@string/country"
                android:textColor="#000000"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:fontFamily="@font/sourcesanspro_regular"
                android:cursorVisible="false"
                android:drawableRight="@drawable/ic_down"
                android:hint="@string/state"
                android:textColor="#000000"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:fontFamily="@font/sourcesanspro_regular"
                android:cursorVisible="false"
                android:drawableRight="@drawable/ic_down"
                android:hint="@string/city"
                android:textColor="#000000"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:hint="@string/landmark"
                    android:textColor="#000000"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:inputType="text"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:hint="@string/fulladdress"
                    android:textColor="#000000"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hapticFeedbackEnabled="true"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/sourcesanspro_bold"
                android:textColor="#ffffff"
                android:lines="3"
                android:text="@string/save"
                android:background="@drawable/button_bg"/>

        </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</layout>