<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeMobileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:contentInsetEnd="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"

        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_left_arrow_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="left"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/change_mobile_number"
                android:textColor="#fff" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pw_input"
            android:layout_centerVertical="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#a4a4a4"
            app:passwordToggleDrawable="@drawable/show_password_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:singleLine="true"
                android:fontFamily="@font/sourcesanspro_regular"
                android:imeOptions="actionNext"
                android:hint="@string/enter_current_password"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@null"
                android:inputType="phone"
                android:fontFamily="@font/sourcesanspro_regular"
                android:hint="@string/enter_new_phone"
                android:textColor="#000000"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hapticFeedbackEnabled="true"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sourcesanspro_bold"
            android:textColor="#ffffff"
            android:text="@string/submit"
            android:background="@drawable/button_bg"/>

    </LinearLayout>

</RelativeLayout>
</layout>
